feat: reestrutura tracks e roadmap
Reorganiza as 7 tracks (cs, backend, frontend, platform,
architecture, ia, career) com novas descriptions, lesson counts
atualizados e phases corretas. Adiciona tracks architecture e
platform. Atualiza roadmap.

--- a/src/content/tracks/backend.mdx
+++ b/src/content/tracks/backend.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Backend & Banco de Dados"
 shortTitle: "Backend"
-description: "Node.js, Go, Java, PHP, SQL, NoSQL, APIs REST, autenticação, cache, filas e arquitetura."
+description: "Node.js, Go, Java, Rust, SQL, NoSQL, REST, gRPC/tRPC, GraphQL, Kafka, serverless, PostgreSQL internals, API design avançado, cache, filas e arquitetura backend."
 color: "#2563EB"
 icon: "⚙️"
 phase: 2
@@ -12,16 +12,16 @@ A engenharia pesada. Aqui você aprende a construir sistemas robustos que susten
 
 ## O que você vai aprender
 
-- **APIs** — REST design, GraphQL, versionamento e error handling
-- **Node.js** — Fundamentos, Event Loop, Streams, Cluster
-- **Go** — Goroutines, channels, interfaces e o ecossistema cloud-native
-- **Java** — JVM, Spring Boot, collections, streams e concorrência
-- **PHP** — PHP 8.x moderno, Composer, Laravel e PSR standards
-- **Bancos de Dados** — SQL, índices, N+1, transações, NoSQL
-- **Segurança** — JWT, OAuth, OWASP Top 10
-- **Testes e Qualidade** — Pirâmide de testes, error handling, observabilidade
-- **Escalabilidade** — Redis, message queues, WebSockets, caching
-- **Arquitetura** — Clean Architecture, microserviços, DDD
+- **APIs** — REST design, gRPC/tRPC, GraphQL, WebSockets, API design avançado (pagination, rate limiting, idempotency, webhooks)
+- **Node.js Internals** — Runtime, V8, libuv, Event Loop, Streams, Cluster e Worker Threads
+- **Linguagens** — Go, Java e Rust (ownership, borrowing, async, Axum)
+- **Bancos de Dados** — SQL, índices, performance, transações, NoSQL, PostgreSQL internals (MVCC, vacuum, pgvector)
+- **Event-Driven** — Kafka internals, Event Sourcing, CQRS, Outbox pattern
+- **Serverless** — AWS Lambda, Step Functions, cold start optimization, SST/CDK
+- **Segurança** — JWT, OAuth, OWASP Top 10, criptografia aplicada
+- **Testes** — Pirâmide de testes, contract testing, mutation testing
+- **Escalabilidade** — Redis (distributed locking, Streams), message queues, sagas, feature flags
+- **Arquitetura Backend** — Rate limiting, circuit breaker, bulkhead pattern
 
 ## Pré-requisitos
 
