--- a/src/content/tracks/career.mdx
+++ b/src/content/tracks/career.mdx
@@ -1,25 +1,23 @@
 ---
 title: "Carreira & Extras"
 shortTitle: "Carreira"
-description: "Documentação, code review, SOLID, entrevistas, inglês técnico e open source."
+description: "Documentação técnica, leitura de código, entrevistas técnicas e inglês técnico."
 color: "#EF4444"
 icon: "🎯"
-phase: 6
-order: 6
+phase: 5
+order: 7
+
 ---
 
-Habilidades além do código. Impacto, comunicação e crescimento contínuo.
+Habilidades além do código. As 5 competências essenciais que multiplicam impacto técnico.
 
 ## O que você vai aprender
 
-- **Documentação Técnica** — ADRs, RFCs
-- **Leitura de Código** — Como navegar codebases novas
-- **Code Review** — Review superficial vs profunda
-- **SOLID** — Princípios de design orientado a objetos
-- **Entrevistas Técnicas** — Coding e System Design
-- **Inglês Técnico** — Plano prático de estudo
-- **Open Source** — Como contribuir
-- **Aprendizado Contínuo** — Framework T-shaped
+- **Documentação Técnica** — ADRs, RFCs, docs-as-code
+- **Leitura de Código** — Como navegar codebases novas e entender código legado
+- **Entrevistas: Coding** — Framework UMPIRE, padrões de problemas, preparação sistemática
+- **Entrevistas: System Design** — Requirements, estimativas, high-level design, deep dive, trade-offs
+- **Inglês Técnico** — Vocabulário técnico, escrita profissional, reuniões em inglês
 
 ## Por que esta trilha é diferente
 
