--- a/src/content/tracks/cs.mdx
+++ b/src/content/tracks/cs.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Ciência da Computação"
 shortTitle: "CS"
-description: "Matemática, C/C++, estruturas de dados, algoritmos, sistemas operacionais, redes e design de sistemas."
+description: "Fundamentos matemáticos, C, estruturas de dados, algoritmos, sistemas operacionais, compiladores, redes, sistemas distribuídos, concorrência avançada e database internals."
 color: "#8B5CF6"
 icon: "🧠"
 phase: 1
@@ -12,13 +12,12 @@ A primeira fase do roadmap — e a mais importante. Estes são os fundamentos qu
 
 ## O que você vai aprender
 
-- **Fundamentos Matemáticos** — Lógica booleana, matemática discreta, logaritmos e álgebra
-- **Fundamentos da Computação** — Lógica de programação (decomposição, invariantes, corretude), Linguagem C (ponteiros, memória, stack vs heap) e análise de complexidade (Big O)
+- **Fundamentos Matemáticos** — Lógica booleana, álgebra, combinatória, probabilidade, logaritmos, aritmética modular e o Master Theorem
+- **Fundamentos da Computação** — Linguagem C (ponteiros, memória, stack vs heap) e análise de complexidade (Big O)
 - **Estruturas de Dados** — Arrays, Linked Lists, Stacks, Queues, Hash Tables, Trees, Graphs
 - **Algoritmos** — Busca, ordenação, recursão e programação dinâmica
-- **Sistemas** — Sistemas Operacionais, Compiladores, Redes e Internet
-- **Teoria da Computação** — Autômatos, computabilidade, classes P e NP
-- **Design e Arquitetura** — Design Patterns e System Design básico
+- **Sistemas** — Sistemas Operacionais (eBPF, io_uring, cgroups v2), Compiladores, Redes e Internet (HTTP/3, QUIC, mTLS)
+- **Avançado** — Fundamentos de Sistemas Distribuídos (Raft, CRDTs, consistent hashing), Concorrência Avançada (lock-free, actors, CSP), Database Internals (B-tree, LSM-tree, MVCC, WAL)
 
 ## Por que começar aqui?
 
