--- a/src/content/tracks/frontend.mdx
+++ b/src/content/tracks/frontend.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Frontend & UI/UX"
 shortTitle: "Frontend"
-description: "JavaScript, TypeScript, React, Next.js, Vue.js, Angular, CSS avançado e performance."
+description: "JavaScript core, TypeScript, React, Next.js, CSS moderno, React Compiler/RSC, Web Components, micro-frontends, acessibilidade WCAG e performance web."
 color: "#EC4899"
 icon: "🎨"
 phase: 2
@@ -13,12 +13,17 @@ A interface com o ser humano. Frontend vai muito além de "fazer página bonita"
 ## O que você vai aprender
 
 - **Fundamentos Web** — Como o browser funciona, HTML semântico, acessibilidade
-- **CSS** — Box Model, Flexbox, Grid, especificidade e CSS moderno
-- **JavaScript** — Closures, Prototypes, DOM API, Event Delegation, Async/Await
-- **TypeScript** — Tipos, generics, utility types e discriminated unions
-- **React** — Virtual DOM, Fiber, Hooks, state management
-- **Frameworks** — Next.js (SSR/SSG), Vue.js (Composition API), Angular (Signals/DI)
-- **Qualidade e Performance** — Testes, bundlers, Core Web Vitals
+- **CSS Completo** — Box Model, Flexbox, Grid, especificidade, container queries e custom properties
+- **JavaScript Core** — Closures, prototypes, `this`, async/await
+- **DOM e Eventos** — DOM tree, selectors, event propagation, delegation, observers
+- **TypeScript** — Tipos, generics, utility types, template literal types, type-level programming
+- **React** — Fiber, Hooks, Server Components, Suspense, concurrent features, state management
+- **Next.js** — SSR, SSG, ISR, App Router
+- **CSS Moderno** — :has(), Container Queries, Cascade Layers, scroll-driven animations, View Transitions API
+- **React Avançado** — React Compiler (auto-memoization), Server Components, Server Actions, Streaming SSR
+- **Web Components & Micro-Frontends** — Custom Elements, Shadow DOM, Lit, Module Federation, single-spa
+- **Acessibilidade** — WCAG 2.2, European Accessibility Act, ARIA, keyboard navigation, testing automatizado
+- **Performance & Tooling** — Build tools, Core Web Vitals, INP, Speculation Rules, LoAF, testes no frontend
 
 ## Pré-requisitos
 
