--- a/src/content/tracks/ia.mdx
+++ b/src/content/tracks/ia.mdx
@@ -1,30 +1,29 @@
 ---
-title: "Inteligencia Artificial"
+title: "Inteligência Artificial"
 shortTitle: "IA"
-description: "Fundamentos de IA, redes neurais, deep learning, LLMs, agentes e prompt engineering."
+description: "Fundamentos de IA, redes neurais, deep learning, LLMs, agentes, prompt engineering e AI para desenvolvedores (RAG, agents, MCP)."
 color: "#06B6D4"
 icon: "🤖"
-phase: 5
-order: 7
+phase: 4
+order: 6
 ---
 
-A quinta fase do roadmap mergulha no universo da Inteligencia Artificial -- desde os fundamentos matematicos ate a construcao de aplicacoes reais com LLMs e agentes autonomos.
+A quarta fase do roadmap mergulha no universo da Inteligência Artificial — desde os fundamentos matemáticos até a construção de aplicações reais com LLMs e agentes autônomos.
 
-## O que voce vai aprender
+## O que você vai aprender
 
-- **Fundamentos de IA** -- Definicoes formais, taxonomia (Narrow/General/Super AI) e paradigmas de Machine Learning
-- **Historia da IA** -- De Turing (1950) aos LLMs modernos, passando pelos AI winters e a revolucao do deep learning
-- **Matematica Essencial** -- Algebra linear, calculo, probabilidade e gradient descent
-- **Redes Neurais** -- Perceptron, MLP, funcoes de ativacao, backpropagation
-- **Deep Learning** -- CNNs, RNNs, LSTMs e Transformers
-- **Large Language Models** -- Tokenizacao, embeddings, pre-treino, fine-tuning, RLHF e inferencia
-- **Agentes de IA** -- ReAct, tool use, RAG, memoria e sistemas multi-agente
-- **Prompt Engineering** -- Zero-shot, few-shot, chain-of-thought e tecnicas avancadas
-- **IA na Pratica** -- APIs, vector databases, frameworks e construcao de aplicacoes
+- **Fundamentos de IA** — Definições, taxonomia, história (Turing até LLMs) e paradigmas de ML
+- **Matemática Essencial** — Álgebra linear, cálculo, probabilidade e gradient descent
+- **Redes Neurais e Deep Learning** — Perceptron, MLP, backpropagation, CNNs, RNNs, Transformers
+- **Large Language Models** — Tokenização, embeddings, pré-treino, fine-tuning, RLHF e inferência
+- **Agentes de IA** — ReAct, tool use, RAG, memória e sistemas multi-agente
+- **Prompt Engineering** — Zero-shot, few-shot, chain-of-thought e técnicas avançadas
+- **IA na Prática** — APIs, vector databases, frameworks e construção de aplicações
+- **AI para Desenvolvedores** — RAG (embeddings, chunking, pgvector), AI Agents (tool use, MCP), LLMs em produção (guardrails, evals, caching)
 
 ## Por que estudar IA?
 
-Inteligencia Artificial deixou de ser um topico academico para se tornar uma ferramenta essencial no toolkit de qualquer engenheiro de software. Entender como LLMs funcionam, como construir agentes e como integrar IA em produtos reais e o que diferencia quem **usa** IA de quem **constroi** com IA.
+Inteligência Artificial deixou de ser um tópico acadêmico para se tornar uma ferramenta essencial no toolkit de qualquer engenheiro de software. Entender como LLMs funcionam, como construir agentes e como integrar IA em produtos reais é o que diferencia quem **usa** IA de quem **constrói** com IA.
 
 ## Tempo estimado
 
